재고 관리 -> 재고 현황 완성

--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -51,8 +51,9 @@
              data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">자재 관리</h6>
+                <a class="collapse-item" th:href="@{/task/part/manage}">재고 관리</a>
+                <a class="collapse-item" th:href="@{/task/part/stock}">재고 현황</a>
                 <a class="collapse-item" th:href="@{/task/part/log}">변동 내역</a>
-                <a class="collapse-item" th:href="@{/task/part/stock}">재고 관리</a>
             </div>
         </div>
     </li>
